### [Modify] Correct 2 files
**Summary**
1. (L.4,5) src/docstringFormatter/__init__.py
    - Delete: __version__
    - Modify: __license__: 'MIT' ---> 'The MIT License'

2. (Other)  pyproject.toml
    - Correct some sentence
    - To finsh build at the point of GitHub releasing(Reference:  [Reference URL >> 3.](https://qiita.com/ieiringoo/items/4bef4fc9975803b08671#flat-layout-%E3%81%AE%E5%A0%B4%E5%90%88)
)
***************************************************
Commit [XXXXX](https://github.com)
-- [Modify] Correct 2 files

(Modify) src/docstringFormatter/__init__.py
(Modify) pyproject.toml
***************************************************
### Reference URL
1. [Configuring setuptools using_Setuptools-specific configuration](https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html#setuptools-specific-configuration)

2. [PyPIパッケージのリリースもバージョニングもGitHub単独で完結させる](https://zenn.dev/detsu/articles/5d74bf72e96a0f)

3. [2022年版pyproject.tomlを使ったPythonパッケージの作り方](https://qiita.com/ieiringoo/items/4bef4fc9975803b08671#flat-layout-%E3%81%AE%E5%A0%B4%E5%90%88)

#★☆☆☆☆
#pyproject.toml #Repository secrets #API token #setuptools_scm #publish-to-pypi.yml
#_version.py

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,6 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "docstringFormatter"
-version = "1.0.0a"
 description = "Format docstring to be able to entry in DeepL or GoogleTranslate"
 readme = "README.md"
 requires-python = ">=3.7"
@@ -13,7 +12,7 @@ authors = [
   { name="Aoi Natsuki", email="blautinte8@gmail.com" },
 ]
 maintainers = [
-  {name = "BlauTinte", email = "blautinte8@gmail.com"}
+  {name = "Blau Tinte", email = "blautinte8@gmail.com"}
 ]
 keywords = [
     "docstringFormatter",
@@ -47,14 +46,16 @@ Documentation = "https://github.com/NatsuSolar/docstringFormatter/blob/main/READ
 Repository = "https://github.com/NatsuSolar/docstringFormatter"
 Changelog = "https://github.com/NatsuSolar/docstringFormatter/blob/main/CHANGELOG.md"
 Bug_Tracker = "https://github.com/NatsuSolar/docstringFormatter/issues"
-dynamic = ["version", "description"]
+dynamic = ["readme"]
 
+[tool.setuptools]
+package-dir = {"" = "src"}
 
 [tool.setuptools.packages.find]
-exclude = ["build", "tests"]
+exclude = ["build", "TEST", "SampleTextfile"]
 
 [tool.setuptools.dynamic]
-version = {attr = "src.docstringFormatter.__version__"}
+readme = {file = ["README.md", "README.rst"], content-type = "text/md"}
 
 [tool.setuptools_scm]
 write_to = "src/docstringFormatter/_version.py"
