### [Modify] Correct 5 files
**Summary**
1. Correct 5 files
  - src/docstringFormatter/__init__.py
    - 🐱
  - CHANGELOG.md
  　- _version.py gets in dir Tree
  - LICENSE
    - Change format
  - MANIFEST.in
    - Add [build, dist, TEST] to "pure"
  - README.md
    - Add few newlines to bottom

***************************************************
Commit [29d4946](https://github.com/NatsuSolar/docstringFormatter/commit/29d49467c3c79fc4e83e4e525d984c6c7de02352)
-- [Modify] Correct 5 files

(Modify) src/docstringFormatter/__init__.py
(Modify) CHANGELOG.md
(Modify) pyproject.toml
(Modify) MANIFEST.in
(Modify) README.md
***************************************************
### Reference URL
None

#★☆☆☆☆
#small fix

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,5 +1,8 @@
 include LICENSE
 include *.md
 exclude README.md
+prune build
+prune dist
+prune TEST
 include requirements.txt
 include TEST-requirements.txt
