### [Modify] get "version" in [project] section
**Summary**
1. (L8) version = "1.0.0.2"
    - To realize auto build function on GitHub
***************************************************
Commit [XXXXX](https://github.com/NatsuSolar/docstringFormatter/commit/)
-- [Modify] get "version" in [project] section

(Add) pyproject.toml
***************************************************
### Reference URL
None

#★★☆☆☆
#pyproject.toml #version

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ build-backend = "setuptools.build_meta"
 [project]
 name = "docstringFormatter"
 description = "Format docstring to be able to entry in DeepL or GoogleTranslate"
+version = "1.0.0.2"
 readme = "README.md"
 requires-python = ">=3.7"
 license = {file = "LICENSE"}
